fixed safari menu button text cutoff

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ div.entryTitle a {
 	.cd-tabs-navigation a:not(#reload) {
 		height: 40px;
 		line-height: 40px;
-		width: 100%;
+		width: 105%;
 		text-align: center;
 		font-size: 1.6rem;
 		padding: 0 2em 0 2em;
